Style buttons on main nav bar
Added color and sizing to buttons on main nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ body {
   display: inline-block;
 }
 
-.nav-div-main a {
+.nav-div-main button {
   color: #ffffff;
+  background-color: #0b0b31;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.75rem;
+  font-size: 0.75rem;
 }
