--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
 }
 
 .smart p {
-  font-size: 0.85rem;
+  font-size: 0.8rem;
   color: #808080;
 }
 
@@ -111,6 +111,8 @@ body {
   border-radius: 0.25rem;
   padding: 0.25rem 0.75rem;
   font-size: 0.9rem;
+  width: 35%;
+  margin-top: 1rem;
 }
 
 /*STRONG Card*/
@@ -128,8 +130,18 @@ body {
 }
 
 .strong p {
-  font-size: 0.85rem;
+  font-size: 0.8rem;
   color: #808080;
+}
+
+.strong button {
+  color: #ffffff;
+  background-color: #0b0b31;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.75rem;
+  font-size: 0.9rem;
+  width: 35%;
+  margin-top: 1rem;
 }
 
 /*STABLE Card*/
@@ -147,6 +159,16 @@ body {
 }
 
 .stable p {
-  font-size: 0.85rem;
+  font-size: 0.8rem;
   color: #808080;
+}
+
+.stable button {
+  color: #ffffff;
+  background-color: #0b0b31;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.75rem;
+  font-size: 0.9rem;
+  width: 35%;
+  margin-top: 1rem;
 }
